# es-git

./: .gitattributes  .gitignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README-ko_kr.md  README.md  biome.json  index.d.ts  index.js  justfile  package.json  tsconfig.json  vitest.config.mts
.github/: CODEOWNERS
.scripts/: prepare-next-release.ts
benchmarks/: README.md  index.bench.ts  nodegit.d.ts  package.json  util.ts
docs/: README.md  gen-reference.ts  gen-typedoc.js  getting-started.md  index.md  intro.md  package.json  performance.md
e2e-tests/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.global-setup.ts
examples/: clone.mjs  es-git.mjs
src/: annotated_commit.rs  apply.rs  attr.rs  blame.rs  blob.rs  branch.rs  checkout.rs  cherrypick.rs  commit.rs  config.rs  cred.rs  describe.rs  diff.rs  ignore.rs  index.rs  js.rs  lib.rs  mailmap.rs  merge.rs  note.rs  object.rs  rebase.rs  reference.rs  reflog.rs  remote.rs  repository.rs  revert.rs  revparse.rs  revwalk.rs  signature.rs  stash.rs  status.rs  submodule.rs  tag.rs  tracing.rs  tree.rs  util.rs  worktree.rs
tests/: annotated-commit.spec.ts  apply.spec.ts  attr.spec.ts  blame.spec.ts  blob.spec.ts  branch.spec.ts  checkout.spec.ts  cherrypick.spec.ts  commit.spec.ts  cred.spec.ts  describe.spec.ts  diff.spec.ts  ignore.spec.ts  index.spec.ts  mailmap.spec.ts  merge.spec.ts  note.spec.ts  rebase.spec.ts  reflog.spec.ts  remote.spec.ts  repository.spec.ts  revert.spec.ts  revparse.spec.ts  revwalk.spec.ts  sha.spec.ts  stash.spec.ts  status.spec.ts  submodule.spec.ts  tmp.ts  (+2 more)
(+527 files in other folders)
