[package]
edition = "2021"
name    = "es-git"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags    = "2.1.0"
chrono      = "0.4"
git2        = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
napi        = { version = "3.7.1", default-features = false, features = ["napi6", "chrono_date"] }
napi-derive = "3.3.0"
thiserror   = "2.0.3"

[build-dependencies]
napi-build = "2.3.0"

[profile.release]
lto = true
